samples/_failures_safe/1761490208_a78105_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_055f5091.c: In function ‘state_to_string’:
./samples/SAFE/__tmp_055f5091.c:147:39: error: missing terminating " character
  147 |         case STATE_PROCESSING: return "PRO
      |                                       ^~~~
./samples/SAFE/__tmp_055f5091.c:147:9: error: expected expression at end of input
  147 |         case STATE_PROCESSING: return "PRO
      |         ^~~~
./samples/SAFE/__tmp_055f5091.c:147:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_055f5091.c:147:9: error: expected declaration or statement at end of input
